# Airsim-ROS

./: README.md  exampleCommand.txt  settings.json
Documentation/: AirsimCpp.md  HowItWorks.md  ROS.md  octomap.md  ompl.md
Documentation/Communication-Protocol/: Python-protocol  Python-protocol.md
Documentation/Example-mission/: pacakge_delivery_dynamic.md  scanning.md
Documentation/General/: Airsim-ROS-Wrapper.md  octomap.md
Documentation/Image/: Readme.md
RosOnJetson/: Ros_example.py  serverOnJetson.py  tcpProtocol.py
protocolOnHostComputer/: AirSimJetsonProtocol.py  AirSimJetsonTcpWithProtocol.py
protocolOnJetson/: serverOnJetson.py  tcpProtocol.py
ros/.catkin_tools/profiles/default/: devel_collisions.txt
ros/devel/: .catkin  env.sh  local_setup.zsh  setup.bash  setup.zsh
ros/devel/.private/airsim_ros_pkgs/: .catkin
ros/devel/.private/airsim_tutorial_pkgs/: .catkin
ros/devel/.private/catkin_simple/: .catkin
ros/devel/.private/catkin_tools_prebuild/: .catkin  _setup_util.py
ros/devel/.private/eigen_checks/: .catkin  .rosinstall  setup.sh
ros/devel/.private/gflags_catkin/: .catkin  local_setup.sh
ros/devel/.private/glog_catkin/: local_setup.sh
ros/devel/.private/mav_msgs/: .rosinstall  setup.sh
ros/devel/.private/mav_planning_msgs/: .catkin
ros/devel/.private/mav_system_msgs/: .catkin
ros/devel/.private/mav_trajectory_generation/: .catkin  local_setup.sh
ros/devel/.private/mav_trajectory_generation_ros/: .catkin
ros/devel/.private/mav_visualization/: setup.sh
ros/devel/.private/mavros/: .catkin
ros/devel/.private/mavros_extras/: .catkin
ros/devel/.private/nlopt/: .catkin  local_setup.sh
ros/devel/.private/yaml_cpp_catkin/: .catkin  .rosinstall
ros/devel/include/: nlopt.h
ros/devel/include/airsim_ros_pkgs/: BoolPlusHeader.h  GPSYaw.h  Land.h  LandGroupRequest.h  Reset.h  SetGPSPositionResponse.h  SetLocalPosition.h  SetLocalPositionResponse.h  TakeoffResponse.h  VelCmd.h  VelCmdGroup.h  follow_trajectory_status_srv.h  follow_trajectory_status_srvRequest.h  follow_trajectory_status_srvResponse.h  get_trajectory.h  get_trajectoryRequest.h  get_trajectoryResponse.h  multiDOF.h  multiDOF_array.h  profiling_data_srv.h  profiling_data_srvRequest.h  profiling_data_srvResponse.h  start_profiling_srv.h  start_profiling_srvRequest.h  start_profiling_srvResponse.h
ros/devel/include/gflags/: gflags_completions.h  gflags_declare.h
ros/devel/include/mav_msgs/: Actuators.h  AttitudeThrust.h  RateThrust.h  RollPitchYawrateThrust.h  Status.h  TorqueThrust.h
ros/devel/include/mav_planning_msgs/: ChangeNameServiceRequest.h  ChangeNameServiceResponse.h  PlannerServiceRequest.h  PointCloudWithPose.h  PolygonWithHoles.h  PolynomialSegment.h  PolynomialSegment4D.h  PolynomialTrajectory4D.h
ros/devel/include/mav_state_machine_msgs/: RunTaskService.h  (+1 more)
ros/devel/lib/: libgflags.so.2.2  libgflags.so.2.2.1  libgflags_nothreads.so.2.2  libglog.la  libglog.so.0  libyaml-cpp0.5.so.0.5
ros/logs/airsim_ros_pkgs/: build.check.000.log.stderr  build.check.001.log.stderr  build.check.004.log.stderr  build.check.005.log.stderr  build.check.018.log.stderr  build.check.067.log.stderr  build.check.229.log.stderr  build.cmake.000.log.stderr  build.cmake.001.log.stderr  build.make.000.log.stderr  build.make.001.log.stderr  build.make.002.log.stderr  build.make.003.log.stderr  build.make.004.log.stderr  build.make.005.log.stderr  build.make.006.log.stderr  build.make.007.log.stderr  build.make.008.log.stderr  build.make.009.log.stderr  build.make.011.log.stderr  build.make.012.log.stderr  build.make.013.log.stderr  build.make.016.log.stderr  build.make.017.log.stderr  build.make.018.log.stderr  build.make.019.log.stderr  build.make.020.log.stderr  build.make.021.log.stderr  build.make.023.log.stderr  build.make.024.log.stderr  build.make.025.log.stderr  build.make.026.log.stderr  build.make.027.log.stderr  build.make.030.log.stderr  build.make.031.log.stderr  build.make.032.log.stderr  build.make.033.log.stderr  build.make.039.log.stderr  build.make.042.log.stderr  build.make.043.log.stderr  (+79 more)
ros/logs/mavros_extras/: build.make.000.log.stderr
ros/logs/nlopt/: build.make.000.log.stderr
ros/logs/yaml_cpp_catkin/: build.make.000.log.stderr
ros/src/airsim_ros_pkgs/: CMakeLists.txt
ros/src/airsim_ros_pkgs/include/: Drone.h  airsim_map.bt  airsim_ros_wrapper.h  as.bt  common_mav.h
ros/src/airsim_ros_pkgs/launch/: airsim_node.launch  octomap_server.launch  package_delivery.launch  package_delivery_dynamic.launch  package_delivery_separate.launch  package_delivery_static.launch  scanning.launch
ros/src/airsim_ros_pkgs/msg/: BoolPlusHeader.msg  multiDOF.msg  multiDOF_array.msg
ros/src/airsim_ros_pkgs/src/: airsim_node.cpp  airsim_ros_wrapper.cpp  common_mav.cpp  follow_trajectory_node.cpp  follow_trajectory_static.cpp  future_collision.cpp  motion_planner.cpp  motion_planner_test.cpp  package_delivery_node.cpp  package_delivery_withMap.cpp  profile_manager.cpp  scanning_node.cpp  scanning_test.cpp
ros/src/airsim_ros_pkgs/srv/: profiling_data_srv.srv  start_profiling_srv.srv
ros/src/common/: Profiling.cpp  panic_pcl.cpp
ros_from_AirSim_package/devel/: _setup_util.py  local_setup.bash  local_setup.sh  setup.sh
ros_from_AirSim_package/devel/include/: nlopt.f  nlopt.hpp
ros_from_AirSim_package/devel/lib/: libgflags_nothreads.so.2.2.1  libglog.so.0.0.0  libnlopt_cxx.la  libyaml-cpp0.5.so.0.5.3
ros_from_AirSim_package/logs/airsim_ros_pkgs/: build.make.000.log.stderr  build.make.010.log.stderr  build.make.011.log.stderr  build.make.012.log.stderr  build.make.020.log.stderr  build.make.025.log.stderr  build.make.028.log.stderr  build.make.032.log.stderr  build.make.047.log.stderr  build.make.050.log.stderr  build.make.061.log.stderr  build.make.065.log.stderr  build.make.070.log.stderr  build.make.071.log.stderr  build.make.072.log.stderr  build.make.075.log.stderr  build.make.080.log.stderr  build.make.087.log.stderr  build.make.090.log.stderr
ros_from_AirSim_package/logs/mav_trajectory_generation_ros/: build.make.000.log.stderr
(+1245 files in other folders)
